fix(engine): walktrigger env settings and moveClickRequest changes (#1015)
* feat(engine): WalkTriggerSetting

* fix(engine): remove unsetMapFlags from opheld packet handlers

* feat(content): ~playerwalk3

* fix(engine): reset moveClickRequest on login, and dont set on p_op/p_walk

* feat(engine): set moveClickRequest to false for certain opheld situations

* feat(engine): opu interactions in osrs have no busy check for setting moveClickRequest

* fix(engine): only clear map flag on op packet errors

* fix(engine): NODE_WALKTRIGGER_SETTING was improperly checked in processPlayerSetup

* chore(engine): remove unecessary clearWaypoints() in Player class

* fix(engine): move delay check to earlier inn opheldu packet handler

---------

Co-authored-by: tannerdino <tannerdino@gmail.com>

--- a/engine/.env.example
+++ b/engine/.env.example
@@ -21,6 +21,7 @@
 # NODE_STAFF=pazaz
 # NODE_CLIENT_ROUTEFINDER=true
 # NODE_SOCKET_TIMEOUT=true
+# NODE_WALKTRIGGER_SETTING=0
 
 ## login server
 # LOGIN_HOST=localhost
