--- a/fly.toml
+++ b/fly.toml
@@ -12,6 +12,7 @@ FRIEND_SERVER = "true"
 LOGIN_SERVER = "true"
 NODE_MEMBERS = "true"
 NODE_PORT = "43594"
+NODE_RANDOM_EVENTS = "false"
 NODE_TICKRATE = "400"
 NODE_XPRATE = "25"
 WEBSITE_REGISTRATION = "false"
