--- a/benchmark/.gitignore
+++ b/benchmark/.gitignore
@@ -1,9 +1,11 @@
 # Generated task directories — regenerate with: bun benchmark/generate-tasks.ts
 # Keep only source files: generate-tasks.ts, shared/, docker/
-*-xp-10m/
-*-xp-5m/
-woodcutting-10/
-total-level-*/
+tasks/
 
-# Extracted benchmark results
-results/
+# Generated result artifacts (not the HTML viewers)
+results/_combined.json
+results/_data.js
+results/skills-30m/
+
+# Build artifact copied by docker/build.sh
+docker/skill_tracker.ts
